# todo-phase1

./: .env.example  .gitignore  README.md  docker-compose.yml  project_structure.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 40aa87844ab4_create_projects_and_tasks_tables.py
app/: main.py
app/cli/: console.py
app/commands/: autoclose_overdue.py
app/controllers/: project_controller.py  task_controller.py
app/db/: session.py
app/models/: __init__.py  project.py  task.py
app/repositories/: project_repository.py  task_repository.py
app/schemas/: project_schema.py  task_schema.py
app/services/: project_service.py  task_service.py
config/: settings.py
core/: models.py
storage/: in_memory_storage.py
todo-cli/cli/: main.py
todo-cli/core/: services.py
todo_cli/cli/: main.py
todo_cli/core/: models.py  services.py
todo_cli/storage/: db_storage.py  in_memory_storage.py
todo_cli/tests/: conftest.py  test_db_storage.py  test_project_service.py  test_task_service.py
