[tool.poetry]
name = "todo-cli"
version = "0.1.0"
description = "ToDoList Phase1 - InMemory OOP CLI"
authors = ["Setareh Hojjaty Shargh <fhojjaty00@gmail.com>"]
readme = "README.md"
packages = [{include = "todo_cli", from = "."}]

[tool.poetry.dependencies]
python = ">=3.12"
python-dotenv =">=1.1.1,<2.0.0"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
todo = "todo_list.cli.main:main"